2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit-view.c: use the indent-on-tab feature of sourceview 1.7.2

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/recent-files/*:	throw away the eggs, they were past due.

	* gedit/gedit-window.[ch]:
	* gedit/gedit-tab.c:
	* gedit/gedit.c:

	New recent-files implementation using GtkRecent.

2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* gedit/gedit-commands-file.c: changed opening of multiple files
	behavior (bug 143646), patch by Paolo Maggi
	* gedit/gedit-io-error-message-area.c: changed already opened message
	to reflect this new behavior

2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/filebrowser.schemas.in: moved default values 
	out of the locale tag because they shouldn't be translated
	
2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/gedit-window.c: added calling update_ui when editability 
	changes
	* plugins/snippets/snippets/SnippetController.py: added honoring the
	editability of the buffer
	
2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-plugin.c:
	
	Fixed restoring of remote location (problem introduced by previous
	commit)

2006-08-04  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-utils.[ch]:
	* plugins/filebrowser/gedit-file-browser-plugin.c:
	* plugins/filebrowser/gedit-file-browser-widget.c:
	
	Fixed checking for uri to be local
	
2006-08-02  Jesse van den Kieboom  <jesse@icecrew.nl>
	* plugins/filebrowser/gedit-file-browser-widget.c: changed tooltips
	for back and forward to match nautilus

	* plugins/filebrowser/gedit-file-browser-widget.c:
	* plugins/filebrowser/gedit-file-browser-view.c:
	
	Fixed bug when opening a directory which is expanded.
	
	* plugins/filebrowser/gedit-file-browser-widget-ui.xml:
	* plugins/filebrowser/gedit-file-browser-widget.c:

	Added keyboard navigation (Alt+Left, Alt+Right, Alt+Up, Backspace) and