@@ -111,11 +111,6 @@ GeditDocument
 
 </para>
 
-<!-- ##### ARG GeditDocument:has-selection ##### -->
-<para>
-
-</para>
-
 <!-- ##### ARG GeditDocument:mime-type ##### -->
 <para>
 
