@@ -46,3 +46,9 @@ GeditPageSetupDialog
 GeditPreferencesDialog
 
 
+<!-- ##### ARG GeditDocument:has-selection ##### -->
+<para>
+
+</para>
+
+
