@@ -1,6 +1,13 @@
 2006-08-07  Paolo Borelli  <pborelli@katamail.com>
 
-	* gedit-view.c: use the indent-on-tab feature of sourceview 1.7.2
+	* gedit/gedit-document.[ch]:
+	* gedit/gedit-window.c:
+
+	use the has-selection property of GtkTextBuffer 2.10.
+
+2006-08-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-view.c: use the indent-on-tab feature of sourceview 1.7.2
 
 2006-08-07  Paolo Borelli  <pborelli@katamail.com>
 
